--- a/.envrc
+++ b/.envrc
@@ -2,3 +2,4 @@
 # envchain --set --noecho github RENOVATE_TOKEN
 export RENOVATE_TOKEN=$(envchain workshop env | grep RENOVATE_TOKEN | cut -d'=' -f2)
 export GITHUB_COM_TOKEN=$RENOVATE_TOKEN
+export AWS_ECR_TOKEN=$(curl -k https://public.ecr.aws/token/ | jq -r '.token')
